--- a/V2rayForMagisk/config.json
+++ b/V2rayForMagisk/config.json
@@ -9,7 +9,7 @@
 		"protocol": "dokodemo-door",
 		"settings": {
 			"port": 53,
-			"address": "dns.google",
+			"address": "8.8.8.8",
 			"network": "tcp,udp,tls"
 		}
 	}, {
@@ -30,7 +30,7 @@
 		"protocol": "shadowsocks",
 		"settings": {
 			"servers": [{
-				"address": "xxxxxxxxx",
+				"address": "xxxxxxxx",
 				"method": "aes-256-gcm",
 				"password": "xxxxxxxx",
 				"port": 80
@@ -86,6 +86,10 @@
 		}, {
 			"type": "field",
 			"outboundTag": "v2",
+			"ip": ["8.8.8.8"]
+		}, {
+			"type": "field",
+			"outboundTag": "v2",
 			"domain": ["google", "geosite:fb"]
 		}, {
 			"type": "field",
@@ -99,10 +103,9 @@
 	},
 	"dns": {
 		"hosts": {
-			"domain:pica-juicy.picacomic.com": "127.0.0.1",
-			"geosite:ad": "127.0.0.1"
+			"geosite:ad": "0.0.0.0"
 		},
-		"servers": ["dns.google", {
+		"servers": ["8.8.8.8", {
 			"address": "223.5.5.5",
 			"port": 53,
 			"domains": ["geosite:cn"]
