--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -40,7 +40,7 @@ https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter
 
 [rewrite_remote]
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrite.conf, tag=DivineEngine Rewrite, enabled=true
-https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=JavaScript, enabled=true
+;https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=JavaScript, enabled=true
 https://raw.githubusercontent.com/RunningMelos/MelosList/master/QuantumultX/Rules/Script.conf, tag=Script, enabled=true
 
 [server_local]
