--- a/QuantumultX/Rules/Script.conf
+++ b/QuantumultX/Rules/Script.conf
@@ -1,4 +1,5 @@
-hostname = *.uve.weibo.com,api.gyrosco.pe,api.weibo.cn,mapi.weibo.com,mp.weixin.qq.com,vsco.co
+hostname = *.uve.weibo.com,api.weibo.cn,mapi.weibo.com,mp.weixin.qq.com
+;,vsco.co,api.gyrosco.pe
 
 ;知乎重定向
 ^https?:\/\/www\.zhihu\.com\/question\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
