--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -39,8 +39,7 @@ https://raw.githubusercontent.com/RunningMelos/MelosList/master/QuantumultX/Rule
 https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Filter/LAN.list, tag=LAN, force-policy=direct, enabled=true
 
 [rewrite_remote]
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrite.conf, tag=DivineEngine Rewrite, enabled=true
-;https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=JavaScript, enabled=true
+https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/Js.conf, tag=JavaScript, enabled=true
 https://raw.githubusercontent.com/RunningMelos/MelosList/master/QuantumultX/Rules/Script.conf, tag=Script, enabled=true
 
 [server_local]
