--- a/QuantumultX/Rules/Script.conf
+++ b/QuantumultX/Rules/Script.conf
@@ -1,15 +1,54 @@
-hostname = *.uve.weibo.com,api.weibo.cn,mapi.weibo.com,mp.weixin.qq.com
-;,vsco.co,api.gyrosco.pe
+hostname = *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, mp.weixin.qq.com, vsco.co, api.gyrosco.pe, spclient.wg.spotify.com, *.googlevideo.com, www.youtube.com, youtubei.googleapis.com, www.googleapis.com, api*.tiktokv.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com, api.bilibili.com, app.bilibili.com
 
-;知乎重定向
-^https?:\/\/www\.zhihu\.com\/question\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
-;去微博应用内广告 by yichahucha
+# 重定向
+# Google
+^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+# 知乎
+^https?:\/\/www\.zhihu\.com\/question\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Macintosh# Intel Mac OS X 10_11_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.98 Safari/537.36$2
+# TikTok
+(.*video_id=\w{32})(.*watermark=)(.*) $1 302
+(?<=(carrier|account|sys)_region=)CN url 307 JP
+
+# 去广告
+# 微博应用内
 ^https?:\/\/m?api\.weibo\.c(n|om)\/2\/(statuses\/(unread|extend|positives\/get|(friends|video)(\/|_)timeline)|stories\/(video_stream|home_list)|(groups|fangle)\/timeline|profile\/statuses|comments\/build_comments|photo\/recommend_list|service\/picfeed|searchall|cardlist|page) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
-;去微博启动页广告 by yichahucha
+# 微博启动页
 ^https?:\/\/(sdk|wb)app\.uve\.weibo\.com(\/interface\/sdk\/sdkad.php|\/wbapplua\/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-;去微信公众号广告 by Choler
+# 微信公众号
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/WeChat.js
-;VSCO 解锁滤镜 by NoByDa
-^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/\d{1,} url 302 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/VSCO
-;Gyroscope解锁PRO by Maasea
+# BiliBili
+^https://app.bilibili.com/x/resource/show/tab\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilibiliTab.js
+^https://app.bilibili.com/x/v2/feed/index\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20feed.js
+^https://app.bilibili.com/x/v2/account/mine\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilibiliAccount.js
+^https://app.bilibili.com/x/v2/view\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20view%20relate.js
+^https://app.bilibili.com/x/v2/rank url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20rank.js
+^https://api.bilibili.com/x/v2/reply/main\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20reply.js
+^https://app.bilibili.com/x/v2/show/popular/index\?access_key url script-response-body https://raw.githubusercontent.com/onewayticket255/Surge-Script/master/surge%20bilibili%20hot.js
+# Spotify
+^https?://spclient.wg.spotify.com/ad-logic/* url reject
+^https?://spclient.wg.spotify.com/ads/* url reject
+^https?://spclient.wg.spotify.com/.+ad_slot url reject
+^https?://spclient.wg.spotify.com/.+banners url reject
+^https?://spclient.wg.spotify.com/.+canvases url reject
+^https?://spclient.wg.spotify.com/.+crashlytics url reject
+^https?://spclient.wg.spotify.com/.+doubleclick.net url reject
+^https?://spclient.wg.spotify.com/.+enabled-tracks url reject
+^https?://spclient.wg.spotify.com/.+event url reject
+^https?://spclient.wg.spotify.com/.+promoted_offer url reject
+# Youtube
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+
+# 解锁应用
+# VSCO 解锁滤镜 by NoByDa
+^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/\d{1, } url 302 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/VSCO
+# Gyroscope解锁PRO by Maasea
 ^https?:\/\/api\.gyrosco\.pe\/v1\/account\/$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/gyroscope.js
