--- a/QuantumultX/Rules/Script.conf
+++ b/QuantumultX/Rules/Script.conf
@@ -47,7 +47,9 @@ hostname = *.uve.weibo.com, api.weibo.cn, mapi.weibo.com, mp.weixin.qq.com, vsco
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
 # 解锁应用
+# 哔哩哔哩番剧开启1080P+
+^https?:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/bilifj.js
 # VSCO 解锁滤镜 by NoByDa
-^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/\d{1, } url 302 https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/VSCO
+^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
 # Gyroscope解锁PRO by Maasea
 ^https?:\/\/api\.gyrosco\.pe\/v1\/account\/$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/gyroscope.js
